Fixed some issues with listening page (still plenty there), starting header now inivisible to avoid rendering unstyled text until I can figure out whats happening

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,10 @@ html {
   font-size: 20px;
 }
 
+.titleContainer {
+  visibility: hidden;
+}
+
 @media (max-width: 2000px), (max-height: 1000px) {
   html {
     font-size: 18px;
